--- a/checkout.html
+++ b/checkout.html
@@ -190,16 +190,18 @@
             </div>
         </section>
           <!-- cart -->
-          <section class="fooditem">
-              <h2 class="fooditem">CART</h2>
+          <section class="fooditemcart">
+              <h2 class="fooditemcart">CART</h2>
 
-              <div id="cartview" class="cart-row">
+              <div class="cart-row">
                   <span class="cart-item cart-header cart-column">ITEM</span>
                   <span class="cart-price cart-header cart-column">PRICE</span>
                   <span class="cart-quantity cart-header cart-column">QUANTITY</span>
               </div>
+              
               <div class="itemsincart">
               </div>
+
               <div class="cart-total">
                   <strong class="cart-total-title">Total</strong>
                   <span class="total">$0</span>
@@ -207,22 +209,23 @@
               <button class="mainbtn buy-btn" type="button">PURCHASE</button>
           </section>
 
+          
     <!-- footer section  -->
-
     <section class="footer">
+
       <div class="share">
-        <a href="#" class="btn">facebook</a>
-        <a href="#" class="btn">twitter</a>
-        <a href="#" class="btn">instagram</a>
+          <a href="#" class="sharebtn">facebook</a>
+          <a href="#" class="sharebtn">twitter</a>
+          <a href="#" class="sharebtn">instagram</a>
       </div>
-
-      <h1 class="credit">
-        created by <span> group 7 </span>
-      </h1>
-    </section>
-
-    <!-- scroll top button  -->
-    <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
+  
+      <h1 class="credit"> created by <span> group 7 </span> </h1>
+  
+  </section>
+  
+  <!-- scroll top button  -->
+  <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
+  <a href="checkout.html#cartview" class="fas fa-shopping-cart" id="scroll-cart"></a>
 
     <!-- custom js file link  -->
     <script src="script.js"></script>
