--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     <div class="content">
         <h1>About Us</h1>
         <h2>From Bean to Cup</h2>
-        <p>​At Cafe Condor, We Get What It Feels Like To Get That Extraordinary, Intense Craving For An Incredibly Tasting Cup Of Espresso. And Now We're Here, At Doon Campus To Quench That Craving For You.
-            At Cafe Condor, We Know Everybody Deserves A Drink That Is Both Tasty And From Beans Of The Top Quality;
-                Without Leaving Your Pockets Lighter Than A Feather. Learn More Our Menu, Our Favourite Pairings And Location,
-                And Make A Trip To Us To Experience Our Cafe Firsthand.</p>
+        <p>We’re A Group Of Fellow Condors Who Want To Create A Place Just As Comfy As Your Home. When Those Morning Classes Are Just A Little Too Early, We’re For You. 
+            When A Condor Has No One To Hug, We’re Here With Our Delicious, Warm Drinks To Help Them Fill That Cold…Cold Void (Temporarily).  
+            </p><p>Our Goal Is To Give Easy Access To Good And Affordable Food, And Now We’re Here At The Waterloo Campus To Do Just That. 
+            </p><p>Checkout Our Menu, Our Favourite Pairings And Location. Then Make A Trip To Us To Experience Your Cafe Firsthand And Maybe You Just Might Friend. </p>
     </div>
 </section>
 <!-- about us sections ends -->
@@ -110,6 +110,12 @@
             Waterloo, ON N2J 2W2<br>
             519-885-0300</p>
             <p>Level 1 - Food Services</p>
+    </div>
+   
+    <div class="content">
+        <h1>Hours</h1>
+        <h2>Monday - Friday</h2>
+        <p>5:30am - 9:00pm</p>
     </div>
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.10335616406!2d-80.52067998450788!3d43.479313379127674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf31d0cec9491%3A0x8bf5f60c306d2207!2sConestoga%20College%20-%20Waterloo!5e0!3m2!1sen!2sca!4v1639650926781!5m2!1sen!2sca" width="600" height="450" allowfullscreen="" loading="lazy" ></iframe>    </div>
